Readme atualizado com descrição e instruções de execução do projeto; pom.xml atualizado com maven-jar-plugin para permitir empacotar arquivo jar